add task selection

--- a/css/timepicker.css
+++ b/css/timepicker.css
@@ -2,6 +2,7 @@
     background-color: #aaa;
     width: 100%;
     overflow: hidden;
+    margin: 20px;
 }
 
 .timepicker-button {
@@ -14,4 +15,3 @@
     overflow: hidden;
     text-align: center;
 }
-
