--- a/static/css/woodpecker.css
+++ b/static/css/woodpecker.css
@@ -1,26 +1,30 @@
+body {
+    background-color: #F2E9D8;
+}
+
 .popup {
     position: absolute;
-    top: 0px;
+    top: 30px;
     left: 0px;
     width: 80%;
     margin: 5% 5%;
     padding: 5% 5%;
-    background-color: #f1f1a1;
+    background-color: #D9D1BA;
     overflow: hidden;
 }
 
 .box {
-    position: absolute;
-    top: 70px;
-    background-color: #f7f709;
-    margin: 1% 1%;
-    width: 98%;
+    position: fixed;
+    top: 120px;
+    margin: 5% 5%;
+    width: 90%;
     overflow: hidden;
     z-index: 100;
 }
 
 .punch {
-    background-color: #f7f7f9;
+    color: #F2E9D8;
+    background-color: #8094A6;
     height: 50px;
     line-height: 50px;
     text-align: center;
@@ -29,7 +33,8 @@
 }
 
 .option {
-    background-color: #f7f7f9;
+    color: #F2E9D8;
+    background-color: #8094A6;
     width: 100%;
     height: 50px;
     line-height: 50px;
@@ -38,7 +43,8 @@
 }
 
 .marked {
-    background-color: #e4e4e4;
+    color: #F2E9D8;
+    background-color: #4C6173;
 }
 
 textarea {
@@ -49,7 +55,11 @@ textarea {
     position: fixed;
     right: 0px;
     top: 0px;
-    margin: 1% 1%;
-    padding: 1% 1%;
-    background-color: #f1f1a1;
+    text-align: center;
+    width: 50px;
+    margin: 10px 10px;
+    padding: 20px 20px;
+    background-color: #4C6173;
+    color: #F2E9D8;
+    z-index: 200;
 }
