--- a/resources/public/css/woodpecker.css
+++ b/resources/public/css/woodpecker.css
@@ -56,7 +56,7 @@ textarea {
 .menu {
     position: fixed;
     right: 0px;
-    top: 0px;
+    bottom: 0px;
     text-align: center;
     width: 50px;
     margin: 10px 10px;
