--- a/resources/public/css/woodpecker.css
+++ b/resources/public/css/woodpecker.css
@@ -26,6 +26,7 @@ body {
 .option {
     color: #F2E9D8;
     background-color: #8094A6;
+    opacity: 0.7;
     width: 100%;
     height: 50px;
     line-height: 50px;
@@ -36,7 +37,7 @@ body {
 
 .marked {
     color: #F2E9D8;
-    background-color: #4C6173;
+    opacity: 1;
     position: relative;
 }
 
